--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
   <body>
 
      <div class="swe">
-        <div class="container">
+        <div class="container py-3">
             <div class="row">
                 <div class="card text-center ">
                     <div class="card-header">
                       <h3>Software Engineering Road Map</h3>
                     </div>
-                    <div class="card-body py-5 bg-dark text-light">
+                    <div class="card-body py-5 ">
                       <h5 class="card-title py-1 text-uppercase">1. Version Control System</h5>
-                      <p class="card-text">Git & Github</p>
+                      <p class="card-text"># Git & Github</p>
                       <h5 class="card-title text-uppercase">2. Competitive Programming</h5>
-                      <p class="card-text"> C , C++ , Data Structure & Algorithm </p>
+                      <p class="card-text"> # C, C++ , Data Structure & Algorithm </p>
                       <h5 class="card-title py-3 text-uppercase">3. FRONTEND DEVELOPMENT</h5>
-                      <p class="card-text">HTML, CSS, Tailwind CSS, Sass, Bootstrap, JavaScript, JQuery, React, Angular</p>
+                      <p class="card-text"># HTML, CSS, Tailwind CSS, Sass, Bootstrap, JavaScript, JQuery, React, Angular</p>
                       <h5 class="card-title py-3 text-uppercase">4.	SOFTWARE DEVELOPMENT & ENGINEERING</h5>
-                      <p class="card-text">Database Management System <br> Database Design & Development (SQL Server) , C#, Asp.net </p>
-                      <a href="#" class="btn btn-primary">Start learning..</a>
+                      <p class="card-text"># Database Management System <br> # Database Design & Development (SQL Server) , C#, Asp.net </p>
+                     
                     </div>
                     <div class="card-footer text-body-secondary">
                      <a  class="text-uppercase text-decoration-none" href="https://www.google.com/search?q=ifthekar+sajal&oq=ifthekar+sajal&aqs=chrome..69i57j69i60l3.2686j0j7&sourceid=chrome&ie=UTF-8">Written by Ifthekar Sajal</a>
