--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                       <h5 class="card-title text-uppercase">2. Competitive Programming</h5>
                       <p class="card-text"> # C, C++ , Data Structure & Algorithm </p>
                       <h5 class="card-title py-3 text-uppercase">3. FRONTEND DEVELOPMENT</h5>
-                      <p class="card-text"># HTML, CSS, Tailwind CSS, Sass, Bootstrap, JavaScript, JQuery, React, Angular</p>
+                      <p class="card-text"># HTML, CSS, Tailwind CSS, Sass, Bootstrap, JavaScript, JQuery, React</p>
                       <h5 class="card-title py-3 text-uppercase">4.	SOFTWARE DEVELOPMENT & ENGINEERING</h5>
-                      <p class="card-text"># Database Management System <br> # Database Design & Development (SQL Server) , C#, Asp.net </p>
+                      <p class="card-text"># Database Management System <br> # Database Design & Development (SQL Server) , C#, Asp.net, Angular </p>
                      
                     </div>
                     <div class="card-footer text-body-secondary">
