--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                       <p class="card-text"># HTML5, CSS3, Tailwind CSS, Sass, Bootstrap, JavaScript, JQuery, React</p>
                       <h5 class="card-title py-3 text-uppercase">4.	SOFTWARE DEVELOPMENT & ENGINEERING</h5>
                       <p class="card-text"># Database Management System <br> # Database Design & Development (SQL Server) , C#, Asp.net, Angular </p>
+                      <h5 class="card-title py-3 text-uppercase">5.NetWorking</h5>
+                      <p class="card-text"># Database Management System <br> # CCNA & Mikrotik </p>
                      
                     </div>
                     <div class="card-footer text-body-secondary">
