--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                       <h5 class="card-title py-3 text-uppercase">4.	SOFTWARE DEVELOPMENT & ENGINEERING</h5>
                       <p class="card-text"># Database Management System <br> # Database Design & Development (SQL Server) , C#, Asp.net, Angular </p>
                       <h5 class="card-title py-3 text-uppercase">5.NetWorking</h5>
-                      <p class="card-text"># Database Management System <br> # CCNA & Mikrotik </p>
+                      <p class="card-text"># CCNA & Mikrotik </p>
                        <h5 class="card-title py-3 text-uppercase">6. Ministry & Govt. Bank With Private Bank</h5>
                       <p class="card-text"># Programmer <br> # Assistant Programmer </p>
                       <p class="card-text"># Sr.Officer(IT) <br> # Officer(IT)</p>
