--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                       <p class="card-text"># Assistant Maintance Engineer <br> # Database Administrator</p>
                     </div>
                     <div class="card-footer text-body-secondary">
-                     <a  class="text-uppercase text-decoration-none" href="https://www.google.com/search?q=ifthekar+sajal&oq=ifthekar+sajal&aqs=chrome..69i57j69i60l3.2686j0j7&sourceid=chrome&ie=UTF-8">Written by Md. Sajal</a>
+                     <a  class="text-uppercase text-decoration-none" href="https://bd.linkedin.com/in/mdsajalcse">Written by Md. Sajal</a>
                     </div>
                   </div>
             </div>
